change client parameters

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,2 +1,9 @@
 server:
   port: 8991
+
+github:
+  client:
+    id: a2fe7261bc5ed91a27d8
+    sercet: 2b66b95c812a1dfd59b00d2294fb78fe5480498a
+  redirect:
+    url: http://localhost:8991/callback
