--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,13 @@
             <version>1.18.12</version>
             <scope>provided</scope>
         </dependency>
+        <!--spring-boot-devtools -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <version>2.2.2.RELEASE</version>
+        </dependency>
+
     </dependencies>
 
     <build>
